Fix menu collapser function (it was backwards).

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -198,6 +198,7 @@
       color: var(--link-color);
       cursor: pointer;
       font-weight: bold;
+      letter-spacing: .15em;
     }
 
     &:hover > .sub-menu,
